--- a/packages/frontend-router/package.json
+++ b/packages/frontend-router/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "@frontends/shell-library",
+  "name": "@frontend/router",
   "version": "0.0.1",
-  "description": "Fronend shell library",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "Frontend",
+    "router"
+  ],
   "author": "Ran Wahle",
   "license": "ISC",
   "dependencies": {
-    "@frontend/router": "^0.0.1"
+    "@frontends/shell-library": "^0.0.1",
+    "navigo": "^7.1.2"
   }
 }
