--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,8 @@
 {
   "lerna": "2.11.0",
   "packages": [
-    "packages/*"
+    "packages/*",
+    "micro-apps/*"
   ],
-  "version": "0.0.0"
+  "version": "0.0.1"
 }
