--- a/micro-apps/shell-app/package.json
+++ b/micro-apps/shell-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shell-app",
-  "version": "0.0.1",
+  "version": "0.0.0-alpha-1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
-    "@frontends/shell-library": "^0.0.1",
+    "@frontends/shell-library": "^0.0.0-alpha-1",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
